--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍓</text></svg>" />
+    <link rel="icon" type="image/png" href="/ChatGPT Image 8 jul 2025, 22_21_54.png" />
   </head>
 
   <body>
